cnp-edge-rules/0a650e28-7c1a-4d21-8c83-d95e2511d47e/policies.yaml
- log: true
  apiVersion: cilium.io/v2
  kind: CiliumClusterwideNetworkPolicy
  spec:
    endpointSelector: {}
    egress:
      - {}
    egressDeny: []
    ingress:
      - fromEndpoints:
          - matchLabels:
              nsx-group: 7-9-8-8
        fromCIDR:
          - 3.4.5.9/32
    ingressDeny: []
  objectId: 6c0d1ad9-57ca-482e-84c2-9e7a4a8fcf2e
  metadata:
    uid: 6c0d1ad9-57ca-482e-84c2-9e7a4a8fcf2e
    name: ahmar-section-1
